Posts endpoints and unit tests
